2010-01-10  Daniel Bates  <dbates@webkit.org>

        Unreviewed, fix typo.
        
        Fixed typo in test LayoutTests/fast/events/frame-programmatic-focus.html.
        The word "frame" should be "iframe" in the string "<input> in frame blurred"
        based on the context of the test. In particular, the line "<input> in iframe focused"
        and the use of an iframe in the test.

        * fast/events/frame-programmatic-focus-expected.txt: 
        * fast/events/frame-programmatic-focus.html:

2010-01-10  Daniel Bates  <dbates@webkit.org>

        Rubber-stamped by Eric Seidel.

        Adding XSSAuditor test http/tests/security/xssAuditor/malformed-HTML.html
        to the Qt Skipped file as it times out. We need to look into test further.
        See bug #33460 for more details.

        * platform/qt/Skipped:

2010-01-10  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Darin Adler.

        RegExp.prototype.toString returns "//" for empty regular expressions
        https://bugs.webkit.org/show_bug.cgi?id=33319

        Add new test cases and adapt existing ones.

        * fast/js/kde/RegExp-expected.txt:
        * fast/js/kde/script-tests/RegExp.js:
        * fast/js/regexp-compile-expected.txt:
        * fast/js/script-tests/regexp-compile.js:
        * fast/regex/non-pattern-characters-expected.txt:

2010-01-10  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Adam Barth.

        [Qt] Add enableXSSAuditor support to QWebSettings and DRT.

        https://bugs.webkit.org/show_bug.cgi?id=33419

        * platform/qt/Skipped:

2010-01-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        http/tests/messaging/cross-domain-message-event-dispatch.html failed on Gtk Linux 64-Bit Debug Bot
        https://bugs.webkit.org/show_bug.cgi?id=33458

        Fix flakey test.  If the machine is very slow, then more than 10ms
        might have elapsed between registering the timeout and calling